--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "@turf/turf": "^7.2.0",
     "@types/leaflet": "^1.9.16",
     "@types/leaflet-draw": "^1.0.11",
